# test

./: AP-protocol.md  Cargo.toml
.github/workflows/: .clippy.yml.kate-swp  .rust-fmt.yml.kate-swp  .voters.yml  .voting.yml  clippy.yml  clippy.yml.bak  dem  democracy-enforcer.yml  non-clippy.yml  rust-fmt.yml  test.yml
src/: main.rs
src/classes/: c04_structshelper.rs  c05_modules.rs  c10_OOP.rs  mod.rs
src/exercises/: ex1.rs  ex2.rs  ex3.rs
